# todorant-tui

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
tests/: test_client.py
todorant_tui/: __main__.py  app.py  config.py  models.py  todorant_client.py
todorant_tui/components/: __init__.py  bool_input.py  current_task.py  date_input.py  multiline_text_input.py  progress.py  text_input.py  todo_list.py  year_month_input.py
todorant_tui/views/: __init__.py  create_todo.py  current.py  edit_todo.py  planning.py
